# frame-logger

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  LICENSE  LICENSE.bsl  README.md  ecs-map.json  ethertype.c  ethertype.h  frame-logger.c  logging.c  logging.h  module.c  module.h  packet_chain.c  packet_chain.h  processor.c  processor.h  prog_version.h.in  timeutils.c  timeutils.h
.github/: FUNDING.yml
.github/workflows/: build-docker.yml  build.yml  ci-test.yml
src/: CMakeLists.txt  frame-logger.c  processor.c  processor.h  utils.c  utils.h
src/tests/: CMakeLists.txt
src/tests/captures/: random_capture_microsec.pcap  ssh.pcap
tests/: CMakeLists.txt  main.py  main.sh  memleak_test.sh.in  packet_chain_count.c  packet_chain_speed.c  packet_chain_speed.sh.in  timestamping.c
tests/captures/: README.md
